Networking/vpc.tf
#Create VPC
resource "aws_vpc" "primary_vpc" {
    cidr_block = var.cidr_block
    instance_tenancy = "default"

    tags = {
      Name = var.vpc_name
    }
}
